@@ -6,11 +6,11 @@
       <h1 class="cr-page-header">Privileges</h1>  
       <h3 ng-hide="showError">User : {{currentUser.name}}</h3> 
 
-      <div class="cr-panel-block" ng-if="showError">
+      <div class="cr-panel-block-p" ng-if="showError">
         You need to have access to `sys.privileges` and `sys.users` to use this feature. Please contact your system administrator. 
       </div>
 
-      <div class="cr-panel-block" ng-if="currentUser.superuser">
+      <div class="cr-panel-block-p" ng-if="currentUser.superuser">
         The superuser has access to the whole cluster. It is not possible to perform GRANT / DENY or REVOKE statements on the superuser.
       </div>
 
